objects/User.object
<CustomObject>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>doctari</fullName>
                </value>
                <value>
                    <fullName>doctari Ärzte Plus</fullName>
                </value>
                <value>
                    <fullName>doctari Ärzte ANÜ</fullName>
                </value>
                <value>
                    <fullName>doctari Pflege</fullName>
                </value>
                <value>
                    <fullName>doctari Fachpflege</fullName>
                </value>
                <value>
                    <fullName>doctari Pflege ANÜ</fullName>
                </value>
                <value>
                    <fullName>doctari Med ANÜ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Register__c</fullName>
        <description>This field is used for the offer Mailing via Marketo. 
Robin S. 11.04.2019</description>
        <formula>IF(City=&quot;Hamburg&quot;, &quot;Amtsgericht Hamburg, HRB 123378 Sitz der Gesellschaft: Hamburg&quot;, &quot;Amtsgericht Berlin (Charlottenburg), HRB 146498 Sitz der Gesellschaft: Berlin&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Register</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserID18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Sig__c</fullName>
        <label>E-Mail Signature Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>E_Mail_Sig__c</fullName>
        <label>E-Mail Signature E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SeatOfTheSociety__c</fullName>
        <formula>IF(ISPICKVAL(Company__c, &apos;doctari&apos;) || ISPICKVAL(Company__c, &apos;doctari Ärzte Plus&apos;) || ISPICKVAL(Company__c, &apos;doctari Ärzte ANÜ&apos;) || ISPICKVAL(Company__c, &apos;doctari Med ANÜ&apos;), &apos;Berlin&apos;, 
IF(ISPICKVAL(Company__c, &apos;doctari Pflege&apos;) || ISPICKVAL(Company__c, &apos;doctari Fachpflege&apos;) || ISPICKVAL(Company__c, &apos;doctari Pflege ANÜ&apos;), &apos;Hamburg&apos;, 
&apos;&apos; 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seat of the Society</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsIntegrationUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical Field: Must be checked to provide a value to exclude or include user from validation rule, automation tool etc.</description>
        <label>[T] Is Integration User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManagingDirectors__c</fullName>
        <formula>$Label.ManagingDirectors</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Managing Directors</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommercialRegister__c</fullName>
        <formula>IF(ISPICKVAL(Company__c, &apos;doctari&apos;), &apos;HRB 146498&apos;,
IF(ISPICKVAL(Company__c, &apos;doctari Ärzte Plus&apos;), &apos;HRB 181928&apos;,
IF(ISPICKVAL(Company__c, &apos;doctari Ärzte ANÜ&apos;), &apos;HRB 152700&apos;,
IF(ISPICKVAL(Company__c, &apos;doctari Med ANÜ&apos;), &apos;HRB 181928&apos;,
IF(ISPICKVAL(Company__c, &apos;doctari Pflege&apos;), &apos;HRB 123378&apos;,
IF(ISPICKVAL(Company__c, &apos;doctari Fachpflege&apos;), &apos;HRB 143947&apos;,
IF(ISPICKVAL(Company__c, &apos;doctari Pflege ANÜ&apos;), &apos;HRB 12995&apos;,
&apos;&apos;
)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commercial Register</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_MID__c</fullName>
        <label>Default MID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_ET_Page__c</fullName>
        <label>Default Marketing Cloud Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommercialRegisterAddition__c</fullName>
        <formula>IF( SeatOfTheSociety__c == &apos;Berlin&apos;, &apos; (Charlottenburg)&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commercial Register Addition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetUsername__c</fullName>
        <label>Marketing Cloud Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTarget_OAuth_Token__c</fullName>
        <label>@deprecated</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange Admin</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>